--- a/QC_Report.Rmd
+++ b/QC_Report.Rmd
@@ -43,21 +43,17 @@ out_dir = params$out_dir
 ```
 
 ```{r data_2_tibble, include = FALSE, quote=F, comment=NA, warning=FALSE, message=FALSE, error=FALSE }
+## RAW DATA
+raw_data$metabolite_data = tibble::as_tibble(raw_data$metabolite_data)
+raw_data$sample_data = tibble::as_tibble(raw_data$sample_data); colnames(raw_data$sample_data) = "SamID"
+raw_data$feature_data = tibble::as_tibble(raw_data$feature_data); colnames(raw_data$feature_data) = "FeatureID"
+raw_data$varexp = raw_data$varexp[,1]
 
-## turn data into tibbles
-#metdata = cbind(rownames(metdata), metdata); colnames(metdata)[1] = "SamID"
-metdata = tibble::as_tibble(metdata)
-##
-sdata = cbind(rownames(sdata), sdata); colnames(sdata)[1] = "SamID"
-sdata = tibble::as_tibble(sdata)
-##
-fdata = cbind(rownames(fdata), fdata); colnames(fdata)[1] = "FeatureID"
-fdata = tibble::as_tibble(fdata)
-##
-#qdata = cbind(rownames(qdata), qdata); colnames(qdata)[1] = "SamID"
-qdata = tibble::as_tibble(qdata)
-
-varexp = varexp[,1]
+## QC Data
+qc_data$metabolite_data = tibble::as_tibble(qc_data$metabolite_data)
+qc_data$sample_data = tibble::as_tibble(qc_data$sample_data); colnames(qc_data$sample_data) = "SamID"
+qc_data$feature_data = tibble::as_tibble(qc_data$feature_data); colnames(qc_data$feature_data) = "FeatureID"
+qc_data$varexp = qc_data$varexp[,1]
 ```
 
 <!---The <style> code below centers the title and date and justifys all paragraph text --->
@@ -85,21 +81,20 @@ Report relates to:
   * Project: `r project`  
   * Platform: `r platform`
 
-The `MetaboQC` `R` package performs two operations: it provides an assessment of the raw metabolomics data and then performs quality control on this data. This report provides descriptive information for raw and quality controlled metabolomics data for the project `r project`. The quality control pipeline is as follows (in order):
+The `MetaboQC` `R` package performs two operations: 
 
-```{r QC-pipeline-flowdiagram, echo=FALSE, out.width='100%'}
-#knitr::include_graphics("")
+1. it provides an assessment of the raw metabolomics data  
+2. then performs quality control on this data
+
+This report provides descriptive information for raw and quality controlled metabolomics data for the project `r project`. The quality control pipeline is as follows (in order):
+
+```{r QC-pipeline-flowdiagram, echo=FALSE, out.width='50%'}
+knitr::include_graphics("images/MetaboQC_workflow.png")
 ```
 
-1.
-2.
-3.
-4.
-5.
-
-Issues can be raised on [GitHub](https://github.com/MRCIEU/MetaboQC/issues). Questions relating to the `MetaboQC` pipeline can be directed to [David Hughes](mailto:d.a.hughes@bristol.ac.uk).
-
-`MetaboQC` is published in [Wellcome Open Research]() and can be cited as:
+1. Issues can be raised on [GitHub](https://github.com/MRCIEU/MetaboQC/issues). 
+2. Questions relating to the `MetaboQC` pipeline can be directed to [David Hughes](mailto:d.a.hughes@bristol.ac.uk).
+3. `MetaboQC` is published in [Wellcome Open Research]() and can be cited as:
 
 > `MetaboQC`: an `R` package for metabolomics quality control across analytical platforms.......................
 
@@ -122,8 +117,9 @@ Analytical power analysis for both case/control (50%/50%) and continuous variabl
 ####################################   
 # Run power analysis and generate plot
 ####################################
-( run.power.make.plot(mydata = metdata ) )
+#( run.power.make.plot(mydata = metdata ) )
 
+(run.cont.power.make.plot.R(mydata = raw_data$metabolite_data))
 ```
 
 ## Missingness
